--- a/MVC_GerenciadorDeConteudo/Views/Paginas/Editar.cshtml
+++ b/MVC_GerenciadorDeConteudo/Views/Paginas/Editar.cshtml
@@ -1,4 +1,4 @@
-﻿@{    
+﻿@{
     Business.Pagina pagina = ViewBag.Pagina;
 }
 
@@ -19,6 +19,12 @@
         </div>
         <div class="form-group">
             <label for="conteudo">Conteúdo:</label>
+            <script src="https://cdn.tiny.cloud/1/xuow72f6l0ilkk1gas30r9utmtmh8szls7e2aw8f7h8q6iec/tinymce/6/tinymce.min.js"></script>
+            <script>
+                tinymce.init({
+                    selector: 'textarea'
+                });</script>
+
             <textarea id="conteudo" name="conteudo" class="form-control">@pagina.Conteudo</textarea>
         </div>
         <button type="submit" class="btn btn-default">Alterar</button>
