--- a/MVC_GerenciadorDeConteudo/Views/Paginas/Index.cshtml
+++ b/MVC_GerenciadorDeConteudo/Views/Paginas/Index.cshtml
@@ -23,6 +23,7 @@
             <td>ID</td>
             <td>Nome</td>
             <td>Data</td>
+            <td>Render</td>
             <td></td>
         </tr>
 
@@ -32,7 +33,10 @@
             <tr>
                 <td>@p.Id</td>
                 <td>@p.Nome</td>
-                <td>@p.Data</td>
+                <td>@p.Data</td>                
+                <td>
+                    <a href="/paginas/@p.Id/preview" target="_blank" class="btn btn-warning">Preview</a>
+                </td>
                 <td>
                     <a href="/paginas/@p.Id/editar" class="btn btn-primary">Alterar dados</a>
                 </td>
